Updated code for latest changes